AmpShare SF Codebase/force-app/main/default/objects/account_AmpShare_Heroku__dll/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <label>account_type</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>account_type</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>