AmpShare SF Codebase/force-app/main/default/objects/account_AmpShare_Heroku__dll/fields/salesforce_id__c.field-meta.xml
<CustomField>
    <fullName>salesforce_id__c</fullName>
    <label>salesforce_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>salesforce_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>